# weather_server

./: .gitignore  app_test.js  kmaAPIList.js  kmaWatcher.js  package-lock.json  package.json  server.js  server_util.js  sync_image.sh  watcher.js
docs/: kim_hgt500_frontend_api_spec.md  phase_8_server_pipeline_implementation_plan.md  phase_8_server_pipeline_prd.md
kma_fetch/: .env.development  .env.production  main.js  main_AWS.js  main_KIM.js  main_KIM_TXT.js  main_RDR.js
kma_fetch/config/: env.js
kma_fetch/python/: kim_hgt_png_generator.py  kim_hgt_text_sequence_generator.py  kim_png_generator.py
kma_fetch/python/gk2a_sync/: ftp_sync_gk2a.py  run_ftp_sync_gk2a.sample.sh  run_ftp_sync_gk2a.sh
kma_fetch/python/kim_hgt_converter/: __init__.py  anomaly.py  contracts.py  converter.py  dataset.py  kim_text.py  metadata.py  packing.py
kma_fetch/services/: api.js  scheduler.js
kma_fetch/tests/: testFname.js
kma_fetch/utils/: db.js  download.js  file.js  kim_text_paths.js  time.js
ref/tools/kim-hgt-converter/: README.md  pyproject.toml
ref/tools/kim-hgt-converter/src/kim_hgt_converter/: __init__.py  anomaly.py  cli.py  contracts.py  converter.py  dataset.py  kim_text.py  metadata.py  packing.py
ref/tools/kim-hgt-converter/tests/: test_cli.py  test_converter.py  test_kim_text.py  test_packing.py
