[project]
name = "kim-hgt-converter"
version = "0.1.0"
description = "Convert KIM GLOB 500hPa geopotential height NetCDF data into web-ready packed PNG assets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "netCDF4>=1.7.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
  "xarray>=2024.1.0"
]

[project.scripts]
kim-hgt-convert = "kim_hgt_converter.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
